external-crates/move/tools/move-cli/tests/sandbox_tests/verify_native_functions_in_publish/args.exp
Command `sandbox publish`:
error[E02007]: invalid 'fun' declaration
  ┌─ ./sources/example.move:2:16
  │
2 │     native fun create_signer(addr: address): signer;
  │                ^^^^^^^^^^^^^ Missing implementation for the native function M::create_signer

